# django-maskpostgresdata

./: .coveragerc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: matrix.py
.github/workflows/: ci.yml
maskpostgresdata/: __init__.py
maskpostgresdata/management/commands/: dump_masked_data.py
requirements/: local.txt  testing.txt
tests/: settings.py  test_command.py
